data/derived/sp14/progs/unify/prog2901.ml.out
Characters 71-72:
  then wwhile (f, x)
               ^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
